--- a/app/src/main/res/layout/activity_sudoku.xml
+++ b/app/src/main/res/layout/activity_sudoku.xml
@@ -1,57 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/screenView"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:grid="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     tools:context="me.eb.klabapp.SudokuActivity">
 
-    <!--
-    <me.eb.klabapp.SudokuGrid xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    -->
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/gameImageView"
-        android:scaleType="fitXY"
-        android:layout_width="250dp"
-        android:layout_height="100dp"
-        android:layout_centerHorizontal="true"
-        android:src = "@drawable/sudoku_banner" />
-
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:src = "@drawable/sudoku_banner"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+    <!--
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/innerRL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/gameImageView">
-
-
-        <!--
-        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/mainGrid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:rowCount="9"
-            android:columnCount = "9">
-        </GridLayout>
-        -->
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:padding="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toBottomOf="@+id/gameImageView"
+        app:layout_constraintBottom_toTopOf="@+id/selectorRL">
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/selectorRL"
         android:layout_width="wrap_content"
-        android:layout_height= "wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/innerRL"
-        android:layout_marginTop="10dp">
+        android:layout_height="50dp"
+        android:padding="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+    </RelativeLayout>
+    -->
+    <LinearLayout
+        android:id="@+id/buttonLayout"
+        android:padding="2dp"
+        android:layout_width="wrap_content"
+        android:layout_height= "0dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="0dp">
 
         <Button
             android:id ="@+id/resetButton"
@@ -70,7 +68,4 @@
 
     </LinearLayout>
 
-
-
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
