--- a/app/src/main/res/layout/activity_sudoku.xml
+++ b/app/src/main/res/layout/activity_sudoku.xml
@@ -3,9 +3,9 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/screenView"
+    android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:grid="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="me.eb.klabapp.SudokuActivity">
@@ -19,27 +19,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-    <!--
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/innerRL"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:padding="0dp"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintTop_toBottomOf="@+id/gameImageView"
-        app:layout_constraintBottom_toTopOf="@+id/selectorRL">
-    </RelativeLayout>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/selectorRL"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:padding="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-    </RelativeLayout>
-    -->
+
     <LinearLayout
         android:id="@+id/buttonLayout"
         android:padding="2dp"
